# svf

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  main.yml
doc/: 2023-03-08.md  PITCH.md  PLAN.md
docs/: EXAMPLE_META.MD  EXAMPLE_X.md  IDEAS.md
example/a0/: schema.blob  schema.txt
example/a1/: schema.blob  schema.hpp
example/schema_a/: schema_a.blob  schema_a.hpp  schema_a.inc  schema_a.txt
meta/: meta.txt  schema.blob  schema.hpp
misc/: natvis.xml  windows_build.bat  windows_generate.bat  windows_test.bat
schema/: a1.txt
src/: binary.cpp  common.hpp  compatibility.cpp  core.hpp  embed.cpp  exe_embed.cpp  exe_svfc.cpp  exe_test_file.cpp  grammar.hpp  meta.blob  meta.hpp  meta.inc  output_binary.cpp  output_cpp.cpp  parsing.cpp  platform.hpp  platform_windows.cpp  svf.hpp  svfc.cpp  test_file.cpp  typechecking.cpp  utilities.hpp
src/core/: compatibility.cpp  grammar.hpp  output_binary.cpp  parsing.cpp  typechecking.cpp
src/exe/: svfc.cpp
src/platform/windows/: implementation.cpp
src/svf/: compatibility.cpp  grammar.hpp  output_binary.cpp  output_cpp.cpp  parsing.cpp  typechecking.cpp
src/test/: a.cpp
svf_docs/: Reference.md
svf_runtime/src/: svf_compatibility.c  svf_conversion.c  svf_internal.c  svf_internal.h  svf_meta.h  svf_meta.hpp  svf_runtime.c  svf_runtime.h  svf_runtime.hpp  svf_stdio.h
svf_tools/: CMakeLists.txt
svf_tools/schema/: A0.txt  A1.txt  B0.txt  B1.txt  D0.txt  D1.txt  Hello.txt  JSON.txt  META.txt  Meta.txt  meta.txt
svf_tools/src/: core.hpp
svf_tools/src/core/: common.cpp  common.hpp  generation.cpp  grammar.hpp  output_c.cpp  output_common.hpp  output_cpp.cpp  parsing.cpp  validation.cpp
svf_tools/src/example/: hello_glue.cpp  hello_read.cpp  hello_write.c  json_read.c  json_write.cpp
svf_tools/src/exe/: amalgamate_runtime.cpp  svfc.cpp
svf_tools/src/test/: a.cpp  b.cpp  c.c  hello_glue.cpp  hello_read.cpp  hello_write.c  json_glue.cpp  json_read.c  json_write.cpp  simple_write_read.cpp
svf_tools/src/test/compatibility/: common.cpp  common.hpp  incompatibility.cpp  invalid_sufficient_level.cpp  malformed.cpp  max_schema_work_exceeded.cpp  params.cpp
svf_tools/src/test/conversion/: allocation_failed.cpp  bad_choice_tag.cpp  common.cpp  common.hpp  data_aliasing_detected.cpp  data_out_of_bounds.cpp  max_recursion_depth_exceeded.cpp  placeholder.cpp  total_data_size_limit_exceeded.cpp
svf_tools/src/test/read/: header.cpp  header_7.cpp  no_allocator_function.cpp  schema_lookup.cpp  schema_lookup_2.cpp
svf_tools/src/test/simple/: a.cpp  b.cpp  c.c  d.cpp  simple_write_read.cpp
svf_tools/src/test/write/: already_finished.cpp  data_would_overflow.cpp  sequence_non_contiguous.cpp  writer_function_failed.cpp
test/: a.cpp
test/a0/: schema.hpp  schema.inc
test/a1/: schema.inc
